# aalib

./: README.md  flake.nix  pyproject.toml
.github/workflows/: pythonpublish.yml
aalib/: __init__.py  bytefmt.py  colors.py  dtime.py  duration.py  http.py  input_field.py  iterhelp.py  multilines.py  peek.py  progress.py
tests/: test_iterhelp.py
