[project]
name = "al-aalib"
version = "0.1.1"
description = "Collectin of neat things"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Anton Lydike", email = "me@antonlydike.de" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aalib"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1"
]
